--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@tailwindcss/typography": "^0.5.10",
         "autoprefixer": "^10.4.16",
         "axios": "^1.6.1",
         "laravel-vite-plugin": "^0.8.0",
@@ -24,7 +25,9 @@
         "@inertiajs/inertia-vue3": "^0.6.0",
         "@inertiajs/progress": "^0.2.7",
         "@vitejs/plugin-vue": "^4.5.2",
+        "@vueup/vue-quill": "^1.2.0",
         "notiwind": "^2.0.2",
+        "quill-image-uploader": "^1.3.0",
         "vue": "^3.3.11",
         "vue-types": "^5.1.1",
         "ziggy-js": "^1.8.1"
