--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,11 @@
-APP_NAME=Laravel
+APP_NAME="STEMBA MADING"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
+FILE_UPLOAD_ENDPOINT=http://localhost:8000
+
+TIMEZONE=Asia/Jakarta
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -11,7 +14,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=smkcoding
 DB_USERNAME=root
 DB_PASSWORD=
 
