--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
+        "stevebauman/purify": "^6.1",
         "tightenco/ziggy": "^1.8"
     },
     "require-dev": {
