--- a/package.json
+++ b/package.json
@@ -25,11 +25,15 @@
         "@inertiajs/inertia-vue3": "^0.6.0",
         "@inertiajs/progress": "^0.2.7",
         "@vitejs/plugin-vue": "^4.5.2",
+        "@vuepic/vue-datepicker": "^7.4.0",
         "@vueup/vue-quill": "^1.2.0",
+        "chart.js": "^4.4.1",
+        "dayjs": "^1.11.10",
         "notiwind": "^2.0.2",
         "quill": "^1.3.7",
         "quill-image-uploader": "^1.3.0",
         "vue": "^3.3.11",
+        "vue-chartjs": "^5.3.0",
         "vue-types": "^5.1.1",
         "ziggy-js": "^1.8.1"
     }
